--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_script:
 script:
   - echo "image is $image"
   - docker build -t "$image" .
-  - ~/tests/run.sh "$image"
+  - ../tests/run.sh "$image"
   - docker run -p 5432:5432 -d --name db arminc/clair-db:latest
   - docker run -p 6060:6060 --link db:postgres -d --name clair arminc/clair-local-scan:v2.0.1
   - docker run -v /var/run/docker.sock:/var/run/docker.sock -d --name clair-scanner ianmaguire/clair-scanner:latest tail -f /dev/null
