--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script:
 
 script:
   - echo "image is $image"
-  - docker build -t "$image" Dockerfile
+  - docker build -t "$image" -f Dockerfile
   - ../tests/run.sh "$image"
   - docker run -p 5432:5432 -d --name db arminc/clair-db:latest
   - docker run -p 6060:6060 --link db:postgres -d --name clair arminc/clair-local-scan:v2.0.1
