--- a/.travis.yml
+++ b/.travis.yml
@@ -9,10 +9,11 @@ env:
 before_script:
   - cd "$BUILD"
   - image="mariadb-server:$BUILD"
+  - docker pull registry.access.redhat.com/rhel7
 
 script:
-  - echo "image is $image"
-  - docker build -t "$image" -f Dockerfile
+  - echo "image is $BUILD"
+  - docker build -f Dockerfile
   - ../tests/run.sh "$image"
   - docker run -p 5432:5432 -d --name db arminc/clair-db:latest
   - docker run -p 6060:6060 --link db:postgres -d --name clair arminc/clair-local-scan:v2.0.1
