Changing startup command to use init script.

--- a/openshift/Dockerfile
+++ b/openshift/Dockerfile
@@ -1,5 +1,7 @@
 FROM registry.access.redhat.com/rhel7
 
+RUN subscription-manager register --org=11787140 --activationkey=MariaDB_Server_Container
+
 COPY version /usr/src/version
 COPY mariadb_repo_setup.sh /usr/src/mariadb_repo_setup.sh
 
@@ -9,4 +11,4 @@ RUN VERSION=`cat /usr/src/version`; bash /usr/src/mariadb_repo_setup.sh; yum ins
 # RUN VERSION=`cat /usr/src/version`; curl downloads.mariadb.com/MariaDB/mariadb-$VERSION/yum/rhel7-amd64/rpms/MariaDB-$VERSION-centos73-x86_64-server.rpm --output /usr/src/MariaDB-$VERSION-centos73-x86_64-server.rpm; rpm -i /usr/src/MariaDB-$VERSION-centos73-x86_64-server.rpm
 
 EXPOSE 3306
-CMD ["service mariadb start"]
+CMD ["/etc/init.d/mysql start"]
