Testing version config

--- a/openshift/Dockerfile
+++ b/openshift/Dockerfile
@@ -6,9 +6,7 @@ COPY version /usr/src/version
 COPY mariadb_repo_setup.sh /usr/src/mariadb_repo_setup.sh
 
 RUN yum -y update; yum clean all
-RUN VERSION=`cat /usr/src/version`; bash /usr/src/mariadb_repo_setup.sh; yum install -y mariadb-server
-
-# RUN VERSION=`cat /usr/src/version`; curl downloads.mariadb.com/MariaDB/mariadb-$VERSION/yum/rhel7-amd64/rpms/MariaDB-$VERSION-centos73-x86_64-server.rpm --output /usr/src/MariaDB-$VERSION-centos73-x86_64-server.rpm; rpm -i /usr/src/MariaDB-$VERSION-centos73-x86_64-server.rpm
+RUN export VERSION=`cat /usr/src/version`; bash /usr/src/mariadb_repo_setup.sh; yum install -y mariadb-server-$VERSION
 
 EXPOSE 3306
-CMD ["/etc/init.d/mysql start"]
+CMD ["service mariadb start"]
