--- a/openshift/Dockerfile
+++ b/openshift/Dockerfile
@@ -6,7 +6,7 @@ COPY version /usr/src/version
 COPY mariadb_repo_setup.sh /usr/src/mariadb_repo_setup.sh
 
 RUN yum -y update; yum clean all
-RUN export VERSION=`cat /usr/src/version`; bash /usr/src/mariadb_repo_setup.sh; yum install -y mariadb-server-$VERSION
+RUN export VERSION=`cat /usr/src/version|awk -F "." '{print $1.$2}`; bash /usr/src/mariadb_repo_setup.sh; yum install -y mariadb-server-$VERSION
 
 EXPOSE 3306
 CMD ["service mariadb start"]
