Adding root password support

--- a/openshift/Dockerfile
+++ b/openshift/Dockerfile
@@ -1,5 +1,7 @@
 FROM registry.access.redhat.com/rhel7
 
+ARG MARIADB_ROOT_PW
+
 RUN subscription-manager register --org=11787140 --activationkey=MariaDB_Server_Container
 
 COPY mariadb_repo_setup.sh /usr/src/mariadb_repo_setup.sh
@@ -9,4 +11,6 @@ RUN bash /usr/src/mariadb_repo_setup.sh
 RUN yum install -y mariadb-server
 
 EXPOSE 3306
-CMD ["service mariadb start"]
+RUN service mariadb start
+
+CMD mysql -e "SET PASSWORD FOR 'root'@'%' = PASSWORD('$MARIADB_ROOT_PW');"
