Removing yum clean

--- a/openshift/Dockerfile
+++ b/openshift/Dockerfile
@@ -6,7 +6,7 @@ RUN subscription-manager register --org=11787140 --activationkey=MariaDB_Server_
 
 COPY mariadb_repo_setup.sh /usr/src/mariadb_repo_setup.sh
 
-RUN yum -y update; yum clean all
+#RUN yum reinstall initscripts
 RUN bash /usr/src/mariadb_repo_setup.sh
 RUN yum install -y mariadb-server
 
