--- a/openshift/Dockerfile
+++ b/openshift/Dockerfile
@@ -6,9 +6,10 @@ RUN subscription-manager register --org=11787140 --activationkey=MariaDB_Server_
 
 COPY mariadb_repo_setup.sh /usr/src/mariadb_repo_setup.sh
 
-RUN yum -y update; yum clean all
-RUN yum reinstall initscripts
 RUN bash /usr/src/mariadb_repo_setup.sh
+RUN yum -y update
+RUN yum clean all
+RUN yum install -y initscripts
 RUN yum install -y mariadb-server
 
 EXPOSE 3306
