Adding host range

--- a/openshift/Dockerfile
+++ b/openshift/Dockerfile
@@ -2,6 +2,7 @@ FROM registry.access.redhat.com/rhel7
 
 EXPOSE 3306
 ARG MARIADB_ROOT_PW
+ARG MARIADB_HOST_RANGE=localhost
 
 COPY mariadb_repo_setup.sh /usr/src/mariadb_repo_setup.sh
 
@@ -12,5 +13,6 @@ RUN yum clean all
 RUN yum install -y mariadb-server
 RUN systemctl enable mariadb.service
 RUN /usr/sbin/init &
+RUN mysql -e "SET PASSWORD FOR 'root'@'$MARIADB_HOST_RANGE' = PASSWORD('$MARIADB_ROOT_PW');"
 
-CMD mysql -e "SET PASSWORD FOR 'root'@'%' = PASSWORD('$MARIADB_ROOT_PW');"
+CMD ["systemctl start mariadb"]
