--- a/openshift/Dockerfile
+++ b/openshift/Dockerfile
@@ -6,11 +6,13 @@ ARG MARIADB_HOST_RANGE=localhost
 
 COPY mariadb_repo_setup.sh /usr/src/mariadb_repo_setup.sh
 
+RUN setenforce 0
 RUN subscription-manager register --org=11787140 --activationkey=MariaDB_Server_Container
 RUN bash /usr/src/mariadb_repo_setup.sh
 RUN yum -y update
 RUN yum clean all
 RUN yum install -y mariadb-server
 RUN systemctl enable mariadb.service
-ETRYPOINT /usr/sbin/init &
-CMD mysql -e "SET PASSWORD FOR 'root'@'$MARIADB_HOST_RANGE' = PASSWORD('$MARIADB_ROOT_PW');"
+RUN systemctl start mariadb.service
+RUN mysql -e "SET PASSWORD FOR 'root'@'$MARIADB_HOST_RANGE' = PASSWORD('$MARIADB_ROOT_PW');"
+CMD ["systemctl status mariadb.service"]
