Using init script

--- a/openshift/Dockerfile
+++ b/openshift/Dockerfile
@@ -11,8 +11,6 @@ RUN bash /usr/src/mariadb_repo_setup.sh
 RUN yum -y update
 RUN yum clean all
 RUN yum install -y mariadb-server
-RUN systemctl enable mariadb
-RUN mkdir /etc/systemd/system/mariadb.service.d/; echo -e '[Service]\nRestart=always' > /etc/systemd/system/mariadb.service.d/mariadv.conf
-RUN /sbin/init
+RUN /etc/init.d/mysql start
 RUN mysql -e "SET PASSWORD FOR 'root'@'$MARIADB_HOST_RANGE' = PASSWORD('$MARIADB_ROOT_PW');"
 CMD ["systemctl status mariadb.service"]
