--- a/openshift/Dockerfile
+++ b/openshift/Dockerfile
@@ -13,4 +13,4 @@ RUN yum clean all
 RUN yum install -y mariadb-server
 RUN /etc/init.d/mysql start
 RUN mysql -e "SET PASSWORD FOR 'root'@'$MARIADB_HOST_RANGE' = PASSWORD('$MARIADB_ROOT_PW');"
-CMD ["systemctl status mariadb.service"]
+CMD ["/etc/init.d/mysql status"]
