--- a/openshift/Dockerfile
+++ b/openshift/Dockerfile
@@ -13,6 +13,5 @@ RUN yum clean all
 RUN yum install -y hostname
 RUN yum install -y mariadb-server
 RUN /etc/init.d/mysql start
-RUN sleep 10
-RUN mysql -u root -e "SET PASSWORD FOR 'root'@'$MARIADB_HOST_RANGE' = PASSWORD('$MARIADB_ROOT_PW');"
+RUN mysql -u root -h localhost -e "SET PASSWORD FOR 'root'@'$MARIADB_HOST_RANGE' = PASSWORD('$MARIADB_ROOT_PW');"
 CMD ["/etc/init.d/mysql restart"]
