Setting command to mysql restart in one liner

--- a/openshift/Dockerfile
+++ b/openshift/Dockerfile
@@ -12,5 +12,5 @@ RUN yum -y update
 RUN yum clean all
 RUN yum install -y hostname
 RUN yum install -y mariadb-server
-RUN /etc/init.d/mysql start; mysqladmin -h 127.0.0.1 -P 3306 password "$MARIADB_ROOT_PW"
+RUN /etc/init.d/mysql start; mysqladmin -h 127.0.0.1 -P 3306 password "$MARIADB_ROOT_PW"; /etc/init.d/mysql restart
 CMD ["/etc/init.d/mysql start"]
