using server.cnf to set root password

--- a/openshift/Dockerfile
+++ b/openshift/Dockerfile
@@ -7,6 +7,7 @@ ARG MARIADB_HOST_RANGE=localhost
 VOLUME /var/lib/mysql
 
 COPY mariadb_repo_setup.sh /usr/src/mariadb_repo_setup.sh
+COPY server.cnf /etc/my.cnf.d/server.cnf
 
 RUN subscription-manager register --org=11787140 --activationkey=MariaDB_Server_Container
 RUN bash /usr/src/mariadb_repo_setup.sh
@@ -14,5 +15,5 @@ RUN yum -y update
 RUN yum clean all
 RUN yum install -y hostname
 RUN yum install -y mariadb-server
-RUN /etc/init.d/mysql start; mysqladmin -h 127.0.0.1 -P 3306 password "$MARIADB_ROOT_PW"; /etc/init.d/mysql restart
+RUN sed -i 's/""/"$MARIADB_ROOT_PW"/g' /etc/my.cnf.d/server.cnf
 CMD ["/etc/init.d/mysql start"]
