--- a/openshift/Dockerfile
+++ b/openshift/Dockerfile
@@ -2,7 +2,6 @@ FROM registry.access.redhat.com/rhel7
 
 EXPOSE 3306
 ARG MARIADB_ROOT_PW
-ENV MARIADB_ROOT_PW $MARIADB_ROOT_PW
 
 COPY mariadb_repo_setup.sh /usr/src/mariadb_repo_setup.sh
 COPY server.cnf /etc/my.cnf.d/server.cnf
@@ -13,5 +12,5 @@ RUN yum -y update
 RUN yum clean all
 RUN yum install -y hostname
 RUN yum install -y mariadb-server
-RUN sed -i 's/password=""/password="$MARIADB_ROOT_PW"/g' /etc/my.cnf.d/server.cnf
+RUN sed -i 's/password=""/password="${MARIADB_ROOT_PW}"/g' /etc/my.cnf.d/server.cnf
 CMD ["/etc/init.d/mysql start"]
