--- a/openshift/Dockerfile
+++ b/openshift/Dockerfile
@@ -12,5 +12,6 @@ RUN yum -y update
 RUN yum clean all
 RUN yum install -y hostname
 RUN yum install -y mariadb-server
+RUN echo ${MARIADB_ROOT_PW}
 RUN sed -i 's/password=""/password="${MARIADB_ROOT_PW}"/g' /etc/my.cnf.d/server.cnf
 CMD ["/etc/init.d/mysql start"]
