--- a/openshift/Dockerfile
+++ b/openshift/Dockerfile
@@ -1,17 +1,16 @@
 FROM registry.access.redhat.com/rhel7
 
 EXPOSE 3306
-ENV mariadb_root_pw=""
 
 COPY mariadb_repo_setup.sh /usr/src/mariadb_repo_setup.sh
 COPY server.cnf /etc/my.cnf.d/server.cnf
+COPY entrypoint.sh /usr/local/bin/entrypoint.sh
 
-RUN echo $mariadb_root_pw
 RUN subscription-manager register --org=11787140 --activationkey=MariaDB_Server_Container
 RUN bash /usr/src/mariadb_repo_setup.sh
 RUN yum -y update
 RUN yum clean all
 RUN yum install -y hostname
 RUN yum install -y mariadb-server
-RUN sed -i 's/ROOTPASSWORD/$mariadb_root_pw/g' /etc/my.cnf.d/server.cnf
+ENTRYPOINT /usr/local/bin/entrypoint.sh $MARIADB_ROOT_PW 
 CMD ["/etc/init.d/mysql start"]
