Adding ENV variable

--- a/openshift/Dockerfile
+++ b/openshift/Dockerfile
@@ -1,5 +1,6 @@
 FROM registry.access.redhat.com/rhel7
 
+ENV MARIADB_ROOT_PW=""
 EXPOSE 3306
 
 COPY mariadb_repo_setup.sh /usr/src/mariadb_repo_setup.sh
