Adding arg and env vars

--- a/openshift/Dockerfile
+++ b/openshift/Dockerfile
@@ -1,6 +1,7 @@
 FROM registry.access.redhat.com/rhel7
 
-ENV MARIADB_ROOT_PW
+ARG MARIADB_ROOT_PASSWORD
+ENV MARIADB_ROOT_PW=$MARIADB_ROOT_PASSWORD
 EXPOSE 3306
 
 COPY mariadb_repo_setup.sh /usr/src/mariadb_repo_setup.sh
